fixed summary word wrap css

--- a/react-app/src/components/PostFormModal/post.css
+++ b/react-app/src/components/PostFormModal/post.css
@@ -58,6 +58,10 @@
     color: rgba(255, 255, 255, 87%);
 }
 
+.post-Input::-webkit-scrollbar {
+    overflow: hidden;
+}
+
 .post-Input:hover {
     cursor: pointer;
 }
